@@ -2429,23 +2429,27 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.fullQuit, 0)
         return d
     # ------------------------------------------------------------------------
-    def doLogout(self, (client, packet), id, expectSucceed=True ):
+    def doLogoutSucceed(self, (client, packet), id):
         avatar = self.service.avatars[id]
         avatar.queuePackets()
         avatar.handlePacketLogic(PacketLogout())
         found = 0
         for packet in avatar.resetPacketsQueue():
-            if expectSucceed:
-                if packet.type == PACKET_POKER_PLAYER_LEAVE:
-                    found += 1
-                    self.assertEquals(packet.serial, client.getSerial())
-        else:
-            for packet in avatar.resetPacketsQueue():
-                if packet.type == PACKET_POKER_PLAYER_LEAVE:
-                    found += 1
-                    self.assertEquals(packet.serial, client.getSerial())
+            if packet.type == PACKET_POKER_PLAYER_LEAVE:
+                found += 1
+                self.assertEquals(packet.serial, client.getSerial())
         self.assertEquals(found, 1)
         return (client, packet)
+    # ------------------------------------------------------------------------
+    def doLogoutFail(self, (client, packet), id):
+        client.sendPacket(PacketLogout())
+        d = client.packetDeferred(True, PACKET_ERROR)
+        def checkbadLogoutReturn( (client, packet) ):
+            self.assertEquals(packet.code, PacketPokerGetPlayerInfo.NOT_LOGGED)
+            self.assertEquals(packet.message, "Not logged in")
+            self.assertEquals(packet.other_type, PACKET_LOGOUT)
+        d.addCallback(checkbadLogoutReturn)
+        return d
     # ------------------------------------------------------------------------
     def test58_packetLogoutSucceed(self):
         d = self.client_factory[0].established_deferred
@@ -2455,13 +2459,13 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.seatTable, 0, 101)
         d.addCallback(self.buyInTable, 0, 101, 1000)
         d.addCallback(self.autoBlindAnte, 0, 101)
-        d.addCallback(self.doLogout, 0)
+        d.addCallback(self.doLogoutSucceed, 0)
         return d
     # ------------------------------------------------------------------------
     def test59_packetLogoutFailed(self):
         d = self.client_factory[0].established_deferred
         d.addCallback(self.setupCallbackChain)
-        d.addCallback(self.doLogout, 0, False)
+        d.addCallback(self.doLogoutFail, 0)
         return d
     # ------------------------------------------------------------------------
     def test60_handSelectAllWithWhere(self):
@@ -2487,7 +2491,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-    loader.methodPrefix = "test60"
+#    loader.methodPrefix = "test59"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
